Bizfi Production/src/objects/Audit_Trail__c.object
<CustomObject>
    <description>Hold the data related to Opportunity/Lead Owner/Stage changes</description>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the information of the current owner when the stage changes.</description>
        <inlineHelpText>This field stores the information of the current owner when the stage changes.</inlineHelpText>
        <label>Current Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Trail2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <description>This is for current stage when the owner gets change.</description>
        <inlineHelpText>This is for current stage when the owner gets change.</inlineHelpText>
        <label>Current Status / Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_change_was_made__c</fullName>
        <label>Date/Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Audit Trails</relationshipLabel>
        <relationshipName>Lead_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Status_Stage_value__c</fullName>
        <label>New Status / Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This store info for new owner after owner ship transfer</description>
        <inlineHelpText>This store info for new owner after owner ship transfer</inlineHelpText>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the information of old owner after owner ship transfer.</description>
        <inlineHelpText>This field stores the information of old owner after owner ship transfer.</inlineHelpText>
        <label>Old Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Trail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Status_Stage_value__c</fullName>
        <label>Old Status / Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Audit Trails</relationshipLabel>
        <relationshipName>Opportunity_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates weather it is stage change or status change.</description>
        <inlineHelpText>Indicates weather it is stage change or status change.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status / Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Audit Trail History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <label>Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current_Owner__c</columns>
        <columns>New_owner__c</columns>
        <columns>Old_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>